--- a/Opciones.css
+++ b/Opciones.css
@@ -13,3 +13,13 @@ table
 {
   width: 200px; margin: 0 auto;
 }
+
+button
+{
+ width: 200px; margin: 0 auto;
+}
+
+#boton
+{
+ width: 200px; margin: 0 auto;
+}
